--- a/style.css
+++ b/style.css
@@ -1,6 +1,30 @@
 main{
-    background-color: #1C1C1E;
+    background-color: #111;
     width: 100%;
     height: 100%;
     display: flex;
+}
+#content{
+    display: flex;
+    width: calc(300px + 50vw);
+    max-width: 1600px;
+    background-color: #1C1C1E;
+    margin: auto;
+    margin-top: 0;
+    margin-bottom: 0;
+    flex-direction: column;
+}
+.row{
+    display: inline-flex;
+    background-color: red;
+    width: 100%;
+    margin-bottom: 14px;
+}
+#navspace{
+    height: 90px;
+}
+#r0{
+    height: 50px;
+    border-radius: 25px;
+    background-color: #008156;
 }
