--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ main{
     min-height: 800px;
     width: 120%;
     align-items: center;
-    background-color: #;
 }
 #cta{
     display: inline-flex;
@@ -92,4 +91,16 @@ h3{
 }
 #qrx{
     padding-bottom: 25px;
+}
+#media{
+    display: inline-flex;
+    flex-direction: row;
+    width: 100%;
+    height: 120px;
+    background-color: #3A3A3C;
+    border-radius: 25px;
+}
+.medialogo{
+    flex: 1;
+    margin: auto;
 }
