--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 main{
     background-color: #1C1C1E;
     width: 100%;
-    height: 100%;
     display: flex;
     font-family: Avenir Next, Helvetica, sans-serif;
 }
@@ -20,15 +19,17 @@ main{
 .row{
     display: inline-flex;
     width: 100%;
-    margin-bottom: 15px;
+    margin-bottom: 50px;
 }
 #navspace{
     height: 90px;
+    margin-bottom: 15px;
 }
 #r0{
     height: 50px;
     border-radius: 25px;
     background-color: #008156;
+    margin-bottom: 15px;
 }
 #announce{
     margin: auto;
@@ -100,4 +101,12 @@ h3{
 }
 .medialogo{
     margin: auto;
+}
+.info{
+    width: 100%;
+    height: 500px;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: row;
+    background-color:lightsteelblue;
 }
