--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ main{
 .row{
     display: inline-flex;
     width: 100%;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
 }
 #navspace{
     height: 90px;
@@ -102,11 +102,39 @@ h3{
 .medialogo{
     margin: auto;
 }
-.info{
+.card{
     width: 100%;
     height: 500px;
     border-radius: 25px;
     display: flex;
     flex-direction: row;
-    background-color:lightsteelblue;
+    background-color:black;
+    border-radius: 25px;
+    overflow: hidden;
+}
+.cardpic{
+    width: 50%;
+    height: 100%;
+    background-color: #222;
+
+}
+.cardblurb{
+    width: 50%;
+    height: 100%;
+    background-color:#111;
+}
+.squares{
+    width: 100%;
+    height: calc(110px + 25vw);
+    max-height: 700px;
+    flex-direction: row;
+    overflow: hidden;
+    justify-content: space-between
+}
+.sqsingle{
+    width: calc(110px + 25vw);
+    background-color: black;
+    border-radius: 25px;
+}
+#sq1a{
 }
