--- a/style.css
+++ b/style.css
@@ -152,3 +152,18 @@ h3{
 }
 #sq1a{
 }
+#aboutcopy{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#abouth1{
+    text-align: center;
+    margin-bottom: 20px;
+}
+.aboutp{
+    font-size: 25px;
+    color: white;
+    padding-left: 50px;
+    padding-right: 50px;
+}
