--- a/style.css
+++ b/style.css
@@ -167,3 +167,22 @@ h3{
     padding-left: 50px;
     padding-right: 50px;
 }
+#team{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#teamrow{
+    display: flex;
+    flex-direction: row;
+    background-color:slategrey;
+    height: 300px;
+    width: 110%;
+    justify-content: space-between;
+}
+.teamcard{
+    width: 30%;
+    height: 100%;
+    background-color:lightgoldenrodyellow;
+    border-radius: 25px;
+}
