--- a/style.css
+++ b/style.css
@@ -175,14 +175,14 @@ h3{
 #teamrow{
     display: flex;
     flex-direction: row;
-    background-color:slategrey;
-    height: 300px;
-    width: 110%;
+    width: 100%;
     justify-content: space-between;
+    margin-top: 30px;
 }
 .teamcard{
     width: 30%;
     height: 100%;
     background-color:lightgoldenrodyellow;
     border-radius: 25px;
+    height: 400px;
 }
