--- a/style.css
+++ b/style.css
@@ -1,18 +1,19 @@
+body {
+    --main-bg: #1C1C1E;
+    background-color: var(--main-bg);
+}
 main{
-    background-color: #1C1C1E;
+    background-color: var(--main-bg);
     width: 100%;
-    display: flex;
     font-family: Avenir Next, Helvetica, sans-serif;
 }
 #content{
-    display: flex;
-    width: calc(300px + 50vw);
-    max-width: 1100px;
-    background-color: #1C1C1E;
+    width: calc(500px + 50vw);
+    max-width: 1200px;
+    background-color: var(--main-bg);
     margin: auto;
     margin-top: 0;
     margin-bottom: 0;
-    flex-direction: column;
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -22,8 +23,34 @@ main{
     margin-bottom: 80px;
 }
 #navspace{
+    position: sticky;
+    top: 0;
+    /* background-color: var(--main-bg); */
+    backdrop-filter: blur(15px);
     height: 90px;
     margin-bottom: 15px;
+    width: calc(500px + 50vw);
+    max-width: 1200px;
+}
+.nav-container {
+    position: sticky;
+    top: 0;
+    backdrop-filter: blur(15px);
+    height: 90px;
+    margin-bottom: 15px;
+    transition: height 100ms ease-in;
+}
+.nav {
+    width: calc(500px + 50vw);
+    max-width: 1200px;
+    margin: auto;
+    height: 100%;
+}
+.nav-inner {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 100%;
 }
 #r0{
     height: 50px;
@@ -41,13 +68,13 @@ main{
 #masthead{
     display: inline-flex;
     flex-direction: row;
-    width: 120%;
+    width: 100%;
     align-items: center;
 }
 #cta{
     display: inline-flex;
     flex-direction: column;
-    width: 41.7%;
+    width: 45%;
     max-width: 600px;
     align-items: start;
 }
@@ -124,7 +151,7 @@ h3{
 .cardblurb{
     display: inline-flex;
     width: 50%;
-    background-color:black;
+    /* background-color:black; */
     flex-direction: column;
     justify-content: center;
     margin-top: 50px;
