--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ main{
     max-width: 1200px;
 }
 .nav-container {
+    position: -webkit-sticky;
+    position: -moz-sticky;
+    position: -o-sticky;
+    position: -ms-sticky;
     position: sticky;
     top: 0;
     backdrop-filter: blur(15px);
