--- a/style.css
+++ b/style.css
@@ -206,12 +206,51 @@ h3{
     margin-top: 30px;
 }
 .teamcard{
+    display: flex;
     width: 30%;
     height: 100%;
-    background-color:lightgoldenrodyellow;
+    background-color:#444;
     border-radius: 25px;
     height: 400px;
+    overflow: hidden;
 }
+.teamid{
+    height: 100px;
+    background-color:#3A3A3C;
+    width: 100%;
+    align-self: flex-end;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.teaminfo{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+.teamname, .teamrole{
+    margin-top: 0;
+    color: white;
+    margin-bottom: 12px;
+}
+.teamname{
+    font-size: 20px;
+    font-weight: 600;
+}
+.teamrole{
+    font-size: 16px;
+    font-weight: 400;
+}
+.teamli{
+    background:seagreen;
+    height: 50px;
+    width: 50px;
+    margin: 25px;
+    border-radius: 25px;
+    background-color: #0072b1;
+}
+
+
 #hiring{
     display: flex;
     flex-direction: column;
@@ -235,15 +274,37 @@ h3{
 }
 #hiringb{
     margin-bottom: 25px;
+    background-color: #008156;
+    padding: 15px;
 }
 .buttons{
     height: 50px;
     color: white;
-    background-color: #008156;
     border-radius: 25px;
-    padding: 15px;
     border-width: 0px;
 }
 .buttons:hover{
     box-shadow: 1px 1px white, 1px -1px white, -1px 1px white, -1px -1px white;
+}   
+#investors{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#investrow{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 50px;
+    margin-top: 10px;
+}
+.investor{
+    max-width: 400px;
+    min-width: 250px;
+    width: 20%;
+    height: 150px;
+    background-color:lightsteelblue;
+    border-radius: 25px;
+    margin: 25px;
 }
