--- a/style.css
+++ b/style.css
@@ -329,6 +329,8 @@ h3{
     justify-content: flex-end;
     min-width: 50%;
     flex: 1;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 #privh3{
     font-size: 20px;
@@ -363,8 +365,16 @@ h3{
     width: 100%;
     overflow: hidden;
     display: flex;
-    height: 1000px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 #privblurbcontent{
     background: none;
+}
+.pbc{
+    margin: 50px;
+    margin-left: 170px;
+    margin-right: 170px;
+    font-size: 22px;
+    font-weight: 400;
 }
