--- a/style.css
+++ b/style.css
@@ -402,6 +402,7 @@ h3{
     flex-direction: column;
     z-index: 2;
     background: none;
+    margin-top: 50px;
 }
 #pressinfo{
     display: flex;
@@ -410,8 +411,6 @@ h3{
 }
 #presslinks{
     height: 53px;
-    width: 500px;
-    background-color:sandybrown;
     margin-top: 15px;
 }
 
@@ -422,7 +421,8 @@ h3{
     padding-top: 15px;
     padding-bottom: 15px;
     width: 100%;
-    color:#444;
+    color:#fff; 
+    flex: 1;
 }
 #pressimage{
     height: 800px;
@@ -447,9 +447,15 @@ h3{
     overflow: hidden;
     display: flex;
     padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
 }
 #pressblurbcontent{
     background: none;
+    justify-content:center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .pbc{
     margin: 50px;
@@ -457,4 +463,22 @@ h3{
     margin-right: 170px;
     font-size: 22px;
     font-weight: 400;
+    margin-bottom: 0;
+}
+.socialb{
+    width: 50px;
+    margin-left: 15px;
+/*  background-color: transparent;*/
+    background-color:lightslategrey;
+}
+#seperator{
+    width: calc(100% - 340px);
+    height: 2px;
+    background-color: #ccc; 
+    margin-top: 50px;
+}
+#sharep{
+    color: #0A84FF;
+    font-weight: 600;
+    font-size: 22px;
 }
